# huro

./: CMakeLists.txt  README.md  package.xml
.ci/: Dockerfile
apps/: g1.cc  g1_low_level.cc  go2.cc  go2_example.py  move_example.py  root_g1.cc  root_go2.cc  sim.cc  sim_g1.cc  sim_go2.cc  spacemouse_publisher.py  spacemouse_publisher_initial.py
apps/rl_tasks/locomotion/g1/: g1_publisher.py
apps/rl_tasks/locomotion/go2/: README.md  get_obs.py  get_obs2.py  get_obs3.py  go2_publisher.py  infos.txt  mapping.py  physx_to_mujoco_go2.yaml  policy.pt  policy_raw.pt  run_policy.py  run_policy2.py  run_policy3.py  stand_then_policy.py
apps/rl_tasks/locomotion/go2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
apps/rl_tasks/locomotion/go2/log/: latest_build
docker/: Dockerfile  build.sh  run.sh  setup_uri.sh
huro/: crc.py  soft_stand.json
huro_py/: crc_go.py  get_obs _g1.py  get_obs.py  mapping.py  utils.py
include/huro/: g1_config.h  humanoid_root_node.h  motor_crc_go.h  motor_crc_hg.h  params.h  quadruped_root_node.h  root_node.h  sim_node.h
launch/: g1_rviz.launch.py  g1_sim.launch.py  go2_rviz.launch.py  go2_sim.launch.py
msg/: SpaceMouseState.msg
python/: go2_example.py  move_example.py
resources/description_files/urdf/g1/: g1_23dof.urdf  g1_23dof_rubber_hands.urdf  g1_23dof_rubber_hands_foot_collisions.urdf  g1_23dof_rubber_hands_only_palm_coll.urdf  g1_29dof.urdf  g1_29dof_push_hands.urdf
resources/description_files/urdf/go2/: go2.urdf
resources/description_files/xml/: g1_29dof.xml
resources/description_files/xml/g1/: g1_23dof.xml  g1_29dof.xml
resources/description_files/xml/go2/: go2.xml
resources/mappings/: physx_to_mujoco_go2.yaml
resources/mappings/go2/: mujoco_to_huro_go2.yaml
resources/models/: policy_asymmetric2.pt  policy_asymmetric3.pt  policy_newton_raw.pt  policy_raw.pt  policy_raw_low_state_asymmetric.pt  policy_raw_low_state_student2.pt  policy_student.pt
resources/models/go2/: policy_asymmetric.pt  policy_asymmetric4.pt  policy_asymmetric5.pt  policy_raw.pt  policy_raw2.pt  policy_teacher.pt
resources/rviz/: g1_29dof.rviz  go2.rviz
src/: humanoid_root_node.cc  motor_crc_go.cc  motor_crc_hg.cc  quadruped_root_node.cc  sim_node.cc
